// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crypto daily 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`crypto exchangeRates 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  Object {
-   "ask_price": null,
-   "bid_price": null,
+   "ask_price": "Float",
+   "bid_price": "Float",
    "exchange_rate": "Float",
    "from_currency_code": "String",
    "from_currency_name": "String",
    "last_refreshed": "Timestamp",
    "time_zone": "String",
`;

exports[`crypto exchangeTimeSeries 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`crypto monthly 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`crypto weekly 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`data daily 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,10 +8,10 @@
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "output_size": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data daily_adjusted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,10 +11,10 @@
        "split_coefficient": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "output_size": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data exchangeTimeSeries 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
        "close": "Float",
-       "date": "Timestamp",
+       "date": "Date",
        "high": "Float",
        "low": "Float",
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "output_size": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data exchangeTimeSeries_adjusted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -11,10 +11,10 @@
        "split_coefficient": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "output_size": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data intraday 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`data monthly 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,9 +8,9 @@
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data monthly_adjusted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,9 +10,9 @@
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data quote 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`data search 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`data weekly 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,9 +8,9 @@
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`data weekly_adjusted 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,9 +10,9 @@
        "open": "Float",
        "volume": "Float",
      },
    ],
    "information": "String",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`forex daily 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`forex exchangeRates 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  Object {
-   "ask_price": null,
-   "bid_price": null,
+   "ask_price": "Float",
+   "bid_price": "Float",
    "exchange_rate": "Float",
    "from_currency_code": "String",
    "from_currency_name": "String",
    "last_refreshed": "Timestamp",
    "time_zone": "String",
`;

exports[`forex exchangeTimeSeries 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  Object {
    "data": Array [
      Object {
        "close": "Float",
-       "date": "Timestamp",
+       "date": "Date",
        "high": "Float",
        "low": "Float",
        "open": "Float",
      },
    ],
`;

exports[`forex intraday 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`forex monthly 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`forex weekly 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`performance sector 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`technical ad 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical adosc 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "fastk_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "slowk_period": "Float",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical adx 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical adxr 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical apo 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,16 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "fast_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "ma_type": "Float",
    "series_type": "String",
    "slow_period": "Float",
    "symbol": "String",
    "time_zone": "String",
`;

exports[`technical aroon 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
        "aroon_down": "Float",
        "aroon_up": "Float",
-       "date": "Timestamp",
+       "date": "Date",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical aroonosc 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical atr 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical bbands 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,19 +1,19 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "real_lower_band": "Float",
        "real_middle_band": "Float",
        "real_upper_band": "Float",
      },
    ],
    "deviation_multiplier_for_lower_band": "Float",
    "deviation_multiplier_for_upper_band": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "ma_type": "Float",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
`;

exports[`technical bop 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical cci 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical cmo 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical dema 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical dx 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical ema 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical ht_dcperiod 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical ht_dcphase 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical ht_phasor 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "phase": "Float",
        "quadrature": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical ht_sine 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "lead_sine": "Float",
        "sine": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical ht_trendline 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical ht_trendmode 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical kama 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical macd 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,18 +1,18 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "macd": "Float",
        "macd_hist": "Float",
        "macd_signal": "Float",
      },
    ],
    "fast_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "signal_period": "Float",
    "slow_period": "Float",
    "symbol": "String",
    "time_zone": "String",
`;

exports[`technical macdext 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,19 +1,19 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "macd": "Float",
        "macd_hist": "Float",
        "macd_signal": "Float",
      },
    ],
    "fast_ma_type": "Float",
    "fast_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "signal_ma_type": "Float",
    "signal_period": "Float",
    "slow_ma_type": "Float",
    "slow_period": "Float",
`;

exports[`technical mama 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "fama": "Float",
        "mama": "Float",
      },
    ],
    "fast_limit": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "slow_limit": "Float",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical mfi 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical midpoint 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical midprice 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical minus_di 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical minus_dm 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical mom 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical natr 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical obv 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical plus_di 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical plus_dm 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical ppo 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,16 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "fast_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "ma_type": "Float",
    "series_type": "String",
    "slow_period": "Float",
    "symbol": "String",
    "time_zone": "String",
`;

exports[`technical roc 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical rocr 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical rsi 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical sar 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "acceleration": "Float",
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "maximum": "Float",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical sma 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical stoch 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,17 +1,17 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "slowd": "Float",
        "slowk": "Float",
      },
    ],
    "fastk_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "slowd_ma_type": "Float",
    "slowd_period": "Float",
    "slowk_ma_type": "Float",
    "slowk_period": "Float",
    "symbol": "String",
`;

exports[`technical stochf 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "fastd": "Float",
        "fastk": "Float",
      },
    ],
    "fastd_ma_type": "Float",
    "fastd_period": "Float",
    "fastk_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical stochrsi 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "fastd": "Float",
        "fastk": "Float",
      },
    ],
    "fastd_ma_type": "Float",
    "fastd_period": "Float",
    "fastk_period": "Float",
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical t3 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,15 @@
  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
    "volume_factor_vfactor": "Float",
`;

exports[`technical tema 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical trange 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_zone": "String",
  }
`;

exports[`technical trima 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical trix 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical ultosc 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical vwap 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`technical willr 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;

exports[`technical wma 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "data": Array [
      Object {
-       "date": "Timestamp",
+       "date": "Date",
        "value": "Float",
      },
    ],
    "indicator": "String",
    "interval": "Interval",
-   "last_refreshed": "Timestamp",
+   "last_refreshed": "Date",
    "series_type": "String",
    "symbol": "String",
    "time_period": "Float",
    "time_zone": "String",
  }
`;
